<resources>
    <string name="app_name">INSEES</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_ankit" />
    <string name="good_wishes" />
    <string name="user" />
    <string name="view_all"><![CDATA[View All >]]></string>
    <string name="_9">9</string>
    <string name="my_todo_s">My ToDo\'s</string>
    <string name="hello">Welcome!</string>
    <string name="good_morning">Good Morning</string>
    <string name="study">Study</string>
    <string name="todo">Todo</string>
    <string name="aboutus">AboutUs</string>
    <string name="home">Home</string>
    <string name="my_to_dos">My Tasks</string>
    <string name="task_title">Task Title</string>
    <string name="tod">TODO</string>
    <string name="add_task">Add Task</string>
    <string name="other_resources">Other Resources</string>
    <string name="study_materials">Study Materials</string>
    <string name="profile">Profile</string>
    <string name="insees">INSEES</string>
    <string name="members">Members</string>
    <string name="t">TODO</string>
    <string name="log_out">Log Out</string>
    <string name="back_to_home_screen">Back to Home Screen</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login">Login</string>
    <string name="ForgotPassword">ForgotPassword</string>
    <string name="login1">Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="new_user">New User?</string>
    <string name="todo3">TODO</string>
    <string name="your_todos">Your Todos</string>
    <string name="content_to_be_written">CONTENT TO BE WRITTEN!!</string>
    <string name="president">President</string>
    <string name="doneela_das">Doneela Das</string>
    <string name="about_insees">About the Department</string>
    <string name="logo">Logo</string>
    <string name="john_doe">John Doe</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="what_do_you_have_to_do">What do you have to do?</string>
    <string name="what_is_the_task">What is the task?</string>
    <string name="deadline">Deadline</string>
    <string name="name">Name</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="email">Email</string>
    <string name="about_dept">The department was established in the year 2008 and currently offers B.Tech programme in Electronics and Instrumentation Engineering, M.Tech in Instrumentation Engineering and PhD program. The impact of electronics and instrumentation engineering touches almost every area of today’s life. This department with its state-of-the-art laboratories and young and dynamic faculty members is involved in providing quality education and promoting innovative research. The lab facilities include Sensors and Transducers, Analog and Digital Circuits, Measurement, Control and Instrumentation, Power Electronics, Biomedical, Communication, Microprocessor, and Design and Fabrication Labs. Facilities are available for interdisciplinary research activities in the broad domain of signal processing, biomedical engineering, instrumentation, sensors, embedded systems, robotics, control and automation, Communication, and micro/nanoelectronics. High-end Lab facilities have been established with funding from external agencies.</string>
    <string name="Branch_Desc">Eletronics and Instrumentation</string>
    <string name="professors">Professors</string>
    <string name="bishal_paul_biswas">Bishal Paul Biswas</string>
    <string name="rishi_gorai">Rishi Gorai</string>
    <string name="rajdeep_sarkar">Rajdeep Sarkar</string>
    <string name="ankit_kr_barnwal">Ankit Kr. Barnwal</string>
    <string name="sudip_das">Sudip Das</string>
    <string name="tasks">Tasks</string>
    <string name="meet_our_developers">Meet Our Developers</string>
    <string name="developers">Developers</string>
</resources>