<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/share"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/about_us"/>

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/rate"
            android:title="@string/rate_us"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="Logout"/>
    </group>

</menu>