<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tvHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvWishes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_morning"
                android:textColor="@color/lightGrey"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tvHello"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvHello"
                app:layout_constraintTop_toBottomOf="@+id/tvHello" />

            <ImageButton
                android:id="@+id/btnProfile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:focusable="true"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/darkGrey"
                android:src="@drawable/ic_user_foreground"
                android:contentDescription="@string/profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.971"
                app:layout_constraintStart_toEndOf="@+id/tvHello"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_textview_bg"
                android:padding="8dp"
                android:text="@string/my_to_dos"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.027"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btnViewAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:background="@drawable/rounded_textview_bg"
                android:backgroundTint="#353535"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="48dp"
                android:padding="8dp"
                android:text="@string/view_all"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.956"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView">

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/rvTodo"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:visibility="gone"
                   tools:itemCount="4"
                   tools:listitem="@layout/item_task"/>

                <Button
                    android:id="@+id/btnAddTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="#353535"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/baseline_add_box_24"
                    android:drawableTint="@color/white"
                    android:padding="8dp"
                    android:paddingStart="120dp"
                    android:paddingEnd="120dp"
                    android:text="@string/add_task"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/other_resources"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewStudyMaterials"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:focusable="true"
                    android:padding="16dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/purpleblue"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingBottom="24dp">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:contentDescription="@string/todo"
                            android:scaleType="centerInside"
                            android:src="@drawable/undraw_notebook_re_id0r" />

                        <TextView
                            android:id="@+id/tvStudyMaterials"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/study_materials"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewInsees"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:focusable="true"
                        android:padding="16dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/lighttyellow"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingBottom="24dp">

                            <ImageView
                                android:id="@+id/imageViewInsees"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:contentDescription="@string/insees"
                                android:scaleType="centerInside"
                                android:src="@drawable/insees_logo"
                                tools:ignore="ImageContrastCheck" />

                            <TextView
                                android:id="@+id/tvInsees"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/insees"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewMembers"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="16dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#28A752"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingBottom="24dp">

                            <ImageView
                                android:id="@+id/imageViewMembers"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:contentDescription="@string/t"
                                android:scaleType="centerInside"
                                android:src="@drawable/undraw_in_the_office_re_jtgc"
                                tools:ignore="ImageContrastCheck" />

                            <TextView
                                android:id="@+id/tvMembers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/members"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>